# gentoo-atom-parser

./: .ghcid  Main.hs  README.md  gentoo-atom-parser.cabal
app/: Main.hs
src/: Parser.hs
